// Vitest Snapshot v1

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1408
dirigeant . indépendant . revenu professionnel: 51991
dirigeant . rémunération . cotisations: 23021
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3374
dirigeant . rémunération . totale: 73032
entreprise . charges: 0
entreprise . chiffre d'affaires: 73032
impôt . montant: 9519"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20788
dirigeant . rémunération . cotisations: 9086
dirigeant . rémunération . net: 1667
dirigeant . rémunération . net . après impôt: 1592
dirigeant . rémunération . totale: 29088
entreprise . charges: 0
entreprise . chiffre d'affaires: 29088
impôt . montant: 898"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20794
dirigeant . rémunération . cotisations: 9105
dirigeant . rémunération . net: 1667
dirigeant . rémunération . net . après impôt: 1592
dirigeant . rémunération . totale: 29112
entreprise . charges: 0
entreprise . chiffre d'affaires: 29112
impôt . montant: 899"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52091
dirigeant . rémunération . cotisations: 27111
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3371
dirigeant . rémunération . totale: 77112
entreprise . charges: 0
entreprise . chiffre d'affaires: 77112
impôt . montant: 9549"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52121
dirigeant . rémunération . cotisations: 28172
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3371
dirigeant . rémunération . totale: 78180
entreprise . charges: 0
entreprise . chiffre d'affaires: 78180
impôt . montant: 9558"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52200
dirigeant . rémunération . cotisations: 30699
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3369
dirigeant . rémunération . totale: 80712
entreprise . charges: 0
entreprise . chiffre d'affaires: 80712
impôt . montant: 9582"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52044
dirigeant . rémunération . cotisations: 25236
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3372
dirigeant . rémunération . totale: 75240
entreprise . charges: 0
entreprise . chiffre d'affaires: 75240
impôt . montant: 9535"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52043
dirigeant . rémunération . cotisations: 25236
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3372
dirigeant . rémunération . totale: 75240
entreprise . charges: 0
entreprise . chiffre d'affaires: 75240
impôt . montant: 9535"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517709
dirigeant . rémunération . cotisations: 152160
dirigeant . rémunération . net: 41667
dirigeant . rémunération . net . après impôt: 23293
dirigeant . rémunération . totale: 652164
entreprise . charges: 0
entreprise . chiffre d'affaires: 652164
impôt . montant: 220486
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > contrats madelin 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17885
dirigeant . rémunération . cotisations: 13182
dirigeant . rémunération . net: 1402
dirigeant . rémunération . net . après impôt: 1366
dirigeant . rémunération . totale: 30000
entreprise . charges: 10000
entreprise . chiffre d'affaires: 40008
impôt . montant: 434"
`;

exports[`calculate simulations-indépendant > contrats madelin 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17885
dirigeant . rémunération . cotisations: 14382
dirigeant . rémunération . net: 1302
dirigeant . rémunération . net . après impôt: 1266
dirigeant . rémunération . totale: 30000
entreprise . charges: 10000
entreprise . chiffre d'affaires: 40008
impôt . montant: 434"
`;

exports[`calculate simulations-indépendant > contrats madelin 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20429
dirigeant . rémunération . cotisations: 10380
dirigeant . rémunération . net: 1635
dirigeant . rémunération . net . après impôt: 1565
dirigeant . rémunération . totale: 30000
entreprise . charges: 10000
entreprise . chiffre d'affaires: 39996
impôt . montant: 840"
`;

exports[`calculate simulations-indépendant > contrats madelin 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13809
dirigeant . rémunération . cotisations: 6732
dirigeant . rémunération . net: 1106
dirigeant . rémunération . net . après impôt: 1106
dirigeant . rémunération . totale: 20000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 21000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > contrats madelin 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 228526
dirigeant . rémunération . cotisations: 79617
dirigeant . rémunération . net: 18365
dirigeant . rémunération . net . après impôt: 11520
dirigeant . rémunération . totale: 300000
entreprise . charges: 15000
entreprise . chiffre d'affaires: 315000
impôt . montant: 82145
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > contrats madelin 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13709
dirigeant . rémunération . cotisations: 6832
dirigeant . rémunération . net: 1097
dirigeant . rémunération . net . après impôt: 1097
dirigeant . rémunération . totale: 20000
entreprise . charges: 500
entreprise . chiffre d'affaires: 20496
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > contrats madelin 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 9694
dirigeant . rémunération . cotisations: 13130
dirigeant . rémunération . net: 573
dirigeant . rémunération . net . après impôt: 573
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20004
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17885
dirigeant . rémunération . cotisations: 13182
dirigeant . rémunération . net: 1402
dirigeant . rémunération . net . après impôt: 1366
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30012
impôt . montant: 434"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17885
dirigeant . rémunération . cotisations: 14382
dirigeant . rémunération . net: 1302
dirigeant . rémunération . net . après impôt: 1266
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30012
impôt . montant: 434"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20431
dirigeant . rémunération . cotisations: 10381
dirigeant . rémunération . net: 1635
dirigeant . rémunération . net . après impôt: 1565
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 841"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13812
dirigeant . rémunération . cotisations: 6732
dirigeant . rémunération . net: 1106
dirigeant . rémunération . net . après impôt: 1106
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20004
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 228526
dirigeant . rémunération . cotisations: 79617
dirigeant . rémunération . net: 18365
dirigeant . rémunération . net . après impôt: 11520
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 82145
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 225033
dirigeant . rémunération . cotisations: 83118
dirigeant . rémunération . net: 18074
dirigeant . rémunération . net . après impôt: 11360
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300012
impôt . montant: 80573
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 125
dirigeant . rémunération . cotisations: 1277
dirigeant . rémunération . net: 8
dirigeant . rémunération . net . après impôt: 8
dirigeant . rémunération . totale: 1368
entreprise . charges: 0
entreprise . chiffre d'affaires: 1368
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 100
dirigeant . rémunération . cotisations: 144
dirigeant . rémunération . net: 8
dirigeant . rémunération . net . après impôt: 8
dirigeant . rémunération . totale: 240
entreprise . charges: 0
entreprise . chiffre d'affaires: 240
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération covid 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 2059
dirigeant . indépendant . revenu professionnel: 51827
dirigeant . rémunération . cotisations: 21352
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3371
dirigeant . rémunération . totale: 71364
entreprise . charges: 0
entreprise . chiffre d'affaires: 71364
impôt . montant: 9554"
`;

exports[`calculate simulations-indépendant > exonération covid 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 103
dirigeant . indépendant . revenu professionnel: 51041
dirigeant . rémunération . cotisations: 12981
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3391
dirigeant . rémunération . totale: 500
entreprise . charges: 0
entreprise . chiffre d'affaires: 62988
impôt . montant: 9318"
`;

exports[`calculate simulations-indépendant > exonération covid 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 141
dirigeant . indépendant . revenu professionnel: 51443
dirigeant . rémunération . cotisations: 17478
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3380
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 67476
impôt . montant: 9439"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 35311
dirigeant . rémunération . cotisations: 10908
dirigeant . rémunération . net: 2841
dirigeant . rémunération . net . après impôt: 2465
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 4515
Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . pension invalidité"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 96690
dirigeant . rémunération . cotisations: 37428
dirigeant . rémunération . net: 5214
dirigeant . rémunération . net . après impôt: 3431
dirigeant . rémunération . totale: 100001
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 21401
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés, entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 96690
dirigeant . rémunération . cotisations: 37428
dirigeant . rémunération . net: 5214
dirigeant . rémunération . net . après impôt: 3431
dirigeant . rémunération . totale: 100001
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 21401
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés, entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20798
dirigeant . rémunération . cotisations: 9090
dirigeant . rémunération . net: 1667
dirigeant . rémunération . net . après impôt: 1617
dirigeant . rémunération . totale: 29100
entreprise . charges: 0
entreprise . chiffre d'affaires: 29100
impôt . montant: 603"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51990
dirigeant . rémunération . cotisations: 23021
dirigeant . rémunération . net: 4167
dirigeant . rémunération . net . après impôt: 3483
dirigeant . rémunération . totale: 73032
entreprise . charges: 0
entreprise . chiffre d'affaires: 73032
impôt . montant: 8214"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20798
dirigeant . rémunération . cotisations: 9090
dirigeant . rémunération . net: 1667
dirigeant . rémunération . net . après impôt: 1494
dirigeant . rémunération . totale: 29100
entreprise . charges: 0
entreprise . chiffre d'affaires: 29100
impôt . montant: 2080"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 665
dirigeant . rémunération . cotisations: 1391
dirigeant . rémunération . net: 51
dirigeant . rémunération . net . après impôt: 51
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2004
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 35353
dirigeant . rémunération . cotisations: 16006
dirigeant . rémunération . net: 2833
dirigeant . rémunération . net . après impôt: 2456
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 50004
impôt . montant: 4528"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10391
dirigeant . rémunération . cotisations: 4593
dirigeant . rémunération . net: 833
dirigeant . rémunération . net . après impôt: 833
dirigeant . rémunération . totale: 14592
entreprise . charges: 0
entreprise . chiffre d'affaires: 14592
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51249
dirigeant . rémunération . cotisations: 22703
dirigeant . rémunération . net: 4108
dirigeant . rémunération . net . après impôt: 3333
dirigeant . rémunération . totale: 72000
entreprise . charges: 0
entreprise . chiffre d'affaires: 72000
impôt . montant: 9297"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10388
dirigeant . rémunération . cotisations: 4593
dirigeant . rémunération . net: 833
dirigeant . rémunération . net . après impôt: 833
dirigeant . rémunération . totale: 14588
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15588
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13584
dirigeant . rémunération . cotisations: 5929
dirigeant . rémunération . net: 1089
dirigeant . rémunération . net . après impôt: 1089
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 12860
dirigeant . rémunération . cotisations: 5627
dirigeant . rémunération . net: 1031
dirigeant . rémunération . net . après impôt: 1031
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 552
dirigeant . rémunération . cotisations: 1368
dirigeant . rémunération . net: 42
dirigeant . rémunération . net . après impôt: 42
dirigeant . rémunération . totale: 1872
entreprise . charges: 0
entreprise . chiffre d'affaires: 1872
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1064
dirigeant . rémunération . cotisations: 1472
dirigeant . rémunération . net: 83
dirigeant . rémunération . net . après impôt: 83
dirigeant . rémunération . totale: 2472
entreprise . charges: 0
entreprise . chiffre d'affaires: 2472
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1584
dirigeant . rémunération . cotisations: 1581
dirigeant . rémunération . net: 125
dirigeant . rémunération . net . après impôt: 125
dirigeant . rémunération . totale: 3084
entreprise . charges: 0
entreprise . chiffre d'affaires: 3084
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2104
dirigeant . rémunération . cotisations: 1691
dirigeant . rémunération . net: 167
dirigeant . rémunération . net . après impôt: 167
dirigeant . rémunération . totale: 3696
entreprise . charges: 0
entreprise . chiffre d'affaires: 3696
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5208
dirigeant . rémunération . cotisations: 2431
dirigeant . rémunération . net: 417
dirigeant . rémunération . net . après impôt: 417
dirigeant . rémunération . totale: 7440
entreprise . charges: 0
entreprise . chiffre d'affaires: 7440
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10391
dirigeant . rémunération . cotisations: 4593
dirigeant . rémunération . net: 833
dirigeant . rémunération . net . après impôt: 833
dirigeant . rémunération . totale: 14592
entreprise . charges: 0
entreprise . chiffre d'affaires: 14592
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103784
dirigeant . rémunération . cotisations: 39587
dirigeant . rémunération . net: 8333
dirigeant . rémunération . net . après impôt: 5977
dirigeant . rémunération . totale: 139584
entreprise . charges: 0
entreprise . chiffre d'affaires: 139584
impôt . montant: 28273
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033656
dirigeant . rémunération . cotisations: 239946
dirigeant . rémunération . net: 83333
dirigeant . rémunération . net . après impôt: 43891
dirigeant . rémunération . totale: 1239936
entreprise . charges: 0
entreprise . chiffre d'affaires: 1239936
impôt . montant: 473300
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;
